--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nativescript-toasty",
-  "version": "4.0.0",
+  "name": "nativescript-toasty-ns-7",
+  "version": "14.0.0",
   "description": "NativeScript toast plugin",
   "main": "toasty",
   "typings": "index.d.ts",
@@ -52,8 +52,8 @@
   "homepage": "https://github.com/triniwiz/nativescript-toasty",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@nativescript/core": "rc",
-    "@nativescript/types": "rc",
+    "@nativescript/core": "~7.0.0",
+    "@nativescript/types": "~7.0.0",
     "husky": "^3.0.0",
     "lint-staged": "^9.1.0",
     "prettier": "^1.18.2",
